# aoc2025-rust

./: .gitignore  Cargo.toml
src/: lib.rs  utils.rs
