[package]
name = "aoc2025-rust"
version = "0.0.0"
edition = "2024"

[profile.release]
opt-level = 3
#lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.11.0"
